Change the whole css and added css for each components

--- a/src/App.css
+++ b/src/App.css
@@ -1,526 +1,18 @@
-.light-theme {
-  --bg-color: white;
-  --text-color: #0a2d5cb7;
-}
+/* App.css */
+*{
+    margin:0;
+    padding:0;
 
-.dark-theme {
-  --bg-color: #575858;
-  --text-color: #0a2d5cb7;
 }
-
-.App {
-  background-color: var(--bg-color);
-  color: var(--text-color);
-  transition: background-color 0.3s, color 0.3s;
-}
-
-/* Reset default margin and padding */
-* {
-  margin: 0;
-  padding: 0;
-}
-
-/* Global Styles */
-body {
-  font-family: Arial, sans-serif;
-  line-height: 1.6;
-  color: var(--text-color);
-}
-
-.CompanyName {
-  display: flex;
-  justify-content: flex-start;
-  font-size: 140%;
-  padding-left: 10%;
-  color: var(--text-color);
-}
-a {
-  text-decoration: none;
-}
-
-.App {
-  max-width: 100%;
-  margin: 0 auto;
-  padding: 2%;
-}
-
-/* Header Styles */
-.navigation {
-  display: flex;
-  align-items: flex-start;
-  background-color: #f4dfa1;
-  box-sizing: border-box;
-  border-radius: 0.625em;
-  padding-top: 2%;
-  gap: 70%;
-}
-
-.navigation ul {
-  list-style-type: none;
-  display: flex;
-  justify-content: flex-end;
-  font-size: 100%;
-  font-weight: bold;
-}
-
-.navigation ul li {
-  margin-right: 2%;
-  padding: 2%;
-  cursor: pointer;
-}
-
-.navigation ul li a {
-  text-decoration: none;
-  color: var(--text-color);
-}
-
-/* Scrolling Text */
-.scrolling-text {
-  position: absolute;
-  color: rgb(57, 34, 4);
-  left: 40%;
-  right: 40%;
-  transform: translate(-50%, -50%);
-  white-space: nowrap;
-  overflow: hidden;
-  animation: scrollText 12s linear infinite;
-}
-
-@keyframes scrollText {
-  0% {
-    transform: translateX(-100%);
+.App.light {
+    /* Light theme styles */
+    background-color: white;
+    color: black;
   }
-  100% {
-    transform: translateX(100%);
-  }
+  
+  .App.dark {
+    /* Dark theme styles */
+    background-color: black;
+    color: white;
 }
-
-/* Main Content Styles */
-main {
-  padding: 10px;
-}
-
-.hero {
-  background-color: #f4dfa1;
-  padding: 2%;
-  text-align: center;
-  border-radius: 0.625em;
-}
-
-.hero h1 {
-  color: #0a2d5cb7;
-  margin-bottom: 2%;
-  font-size: 2rem;
-}
-
-.hero p {
-  color: #0a2d5cb7;
-  margin-bottom: 3%;
-  align-items: center;
-}
-
-.btn {
-  display: inline-block;
-  padding: 1em 2em;
-  font-size: 1rem;
-  color: #f4dfa1;
-  background: linear-gradient(45deg, #823c3c, #ff4500);
-  border: none;
-  border-radius: 2em 0 2em 0;
-  cursor: pointer;
-  text-decoration: none;
-  transition: 0.3s ease, transform 0.3s ease;
-  box-shadow: 0 0.25em 1em rgba(0, 0, 0, 0.2);
-}
-
-.btn:hover {
-  background: linear-gradient(45deg, #ff4500, #823c3c);
-  transform: translateY(-0.125em);
-}
-
-.btn:active {
-  transform: translateY(0);
-}
-
-.cake-catalog {
-  padding: 5% 0;
-  text-align: center;
-}
-
-.cake-listing {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  justify-content: space-around;
-}
-
-/* Cake Styles */
-.cake {
-  width: 20%;
-  height: auto;
-  background-color: #f4dfa1;
-  border-radius: 0.625em;
-  box-shadow: 0 0 1.25em rgba(0, 0, 0, 0.1);
-  padding: 2%;
-  margin: 5%;
-  transition: all 0.3s ease;
-  position: relative;
-}
-
-.cake::before {
-  content: "";
-  position: absolute;
-  background: linear-gradient(
-    to bottom,
-    rgba(255, 255, 255, 0) 0%,
-    #f4dfa1 100%
-  );
-  z-index: 1;
-  border-radius: 0.625em;
-}
-
-.cake:hover {
-  transform: translateY(-0.3125em) rotateY(10deg);
-  box-shadow: 0 0 1.875em rgba(0, 0, 0, 0.4);
-}
-
-.cake img {
-  width: 50%;
-  height: auto;
-  object-fit: cover;
-  border-radius: 0.5em;
-}
-
-.cake h3 {
-  margin-top: 1.5em;
-  animation: fadeIn 1s ease;
-}
-
-.cake p {
-  font-size: 0.875rem;
-  margin-bottom: 1em;
-}
-
-.cake button {
-  background-color: #f31202;
-  color: #f4dfa1;
-  border: #333;
-  padding: 0.5em 1em;
-  background: linear-gradient(45deg, #823c3c, #ff4500);
-  border: none;
-  border-radius: 5em 0 5em 0;
-  cursor: pointer;
-  text-decoration: none;
-  transition: background-color 0.3s ease;
-}
-
-.cake button:hover {
-  background: linear-gradient(45deg, #ff4500, #823c3c);
-  transform: translateY(-0.125em);
-}
-
-/* Footer Styles */
-.footer {
-  background-color: #333;
-  color: #f4dfa1;
-  text-align: center;
-  padding: 4%;
-  margin-top: 5%;
-  border-radius: 0.625em;
-}
-
-/* About Us and Contact Us Sections */
-.about-us,
-.details {
-  padding: 5% 5% 5% 5%;
-  text-align: center;
-}
-
-.about-us h2,
-.details h2 {
-  color: var(--text-color);
-  margin-bottom: 2%;
-  font-size: 1.75rem;
-  align-items: center;
-}
-.details label h4 {
-  color: var(--text-color);
-  margin-bottom: 1%;
-  font-size: 1.25rem;
-  font-weight: 600;
-  display: block;
-  text-align: left;
-}
-.about-us p,
-.details form {
-  color: var(--text-color);
-  margin-bottom: 3%;
-  margin-left: 3% !important;
-}
-
-.details input,
-.details textarea {
-  width: 100%;
-  padding: 1em;
-  margin-bottom: 2%;
-  border-radius: 0.3125em;
-  border: 1px solid #ccc;
-}
-.details button {
-  background-color: #f31202;
-  color: #f4dfa1;
-  border: #333;
-  padding: 1em 1em;
-  background: linear-gradient(45deg, #823c3c, #ff4500);
-  border: none;
-  border-radius: 0 3em 0 3em;
-  cursor: pointer;
-  text-decoration: none;
-  transition: background-color 0.3s ease;
-}
-
-.details button:hover {
-  background: linear-gradient(45deg, #ff4500, #823c3c);
-  transform: translateY(-0.125em);
-}
-
-.details p {
-  animation: fadeIn 0.5s ease-in-out;
-  color: var(--text-color);
-  margin-top: 2%;
-}
-
-/* Animations */
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-/* Media Queries for Android and Small Screens*/
-@media only screen and (min-width: 481px) and (max-width: 767px) {
-  .CompanyName {
-    font-size: 90%;
-    padding-right: 15%;
-  }
-
-  .App {
-    max-width: 90%;
-    padding: 5%;
-  }
-  .navigation {
-    padding-top: 2%;
-    gap: 55%;
-  }
-
-  .navigation ul {
-    list-style-type: none;
-    display: flex;
-    justify-content: flex-end;
-    font-size: 60%;
-  }
-
-  .navigation ul li {
-    margin-right: 2%;
-    padding: 2%;
-  }
-
-  .scrolling-text {
-    left: 40%;
-    right: 40%;
-    font-size: 8%;
-  }
-
-  main {
-    padding: 4%;
-  }
-
-  .hero {
-    padding: 4%;
-  }
-
-  .hero h1 {
-    font-size: 100%;
-  }
-
-  .btn {
-    padding: 2% 4%;
-    font-size: 20%;
-  }
-
-  .cake {
-    width: 50%;
-    height: auto;
-    margin: 8%;
-  }
-
-  .cake img {
-    width: 50%;
-    height: auto;
-  }
-  .footer {
-    padding: 3%;
-  }
-  .about-us,
-  .details {
-    padding: 0% 2% 2% 2%;
-  }
-  .details {
-    margin: 3% 3% 3% 3%;
-  }
-
-  .about-us h2,
-  .details h2 {
-    font-size: 120%;
-  }
-
-  .details input,
-  .details textarea {
-    padding: 3%;
-  }
-
-  .details button {
-    padding: 3% 7%;
-  }
-}
-@media only screen and (max-width: 480px) {
-  /* Your styles for smaller Android phones */
-  .CompanyName {
-    font-size: 80%;
-    padding-left: 5%;
-  }
-
-  .App {
-    max-width: 100%;
-  }
-
-  .navigation {
-    flex-direction: row;
-    padding-top: 3%;
-    gap: 40%;
-  }
-
-  .navigation ul {
-    flex-direction: row;
-    font-size: 60%;
-  }
-
-  .navigation ul li {
-    margin-right: 2%;
-    padding: 2%;
-  }
-
-  .scrolling-text {
-    left: 40%;
-    right: 40%;
-    font-size: 8%;
-  }
-
-  main {
-    padding: 5%;
-  }
-
-  .hero {
-    padding: 5%;
-  }
-
-  .hero h1 {
-    font-size: 1.5rem;
-  }
-
-  .hero p {
-    font-size: 1rem;
-  }
-
-  .btn {
-    padding: 3% 6%;
-    font-size: 1rem;
-  }
-
-  .cake {
-    width: 50%;
-    height: auto;
-    margin: 5%;
-  }
-
-  .cake img {
-    width: 50%;
-    height: auto;
-  }
-
-  .footer {
-    padding: 5%;
-  }
-
-  .about-us {
-    padding: 5% 5% 5% 5%;
-  }
-  .details {
-    max-width: 80%;
-    padding: 2% 2% 2% 2%;
-    margin: 2%;
-  }
-
-  .about-us h2,
-  .details h2 {
-    font-size: 1.5rem;
-    align-items: center;
-  }
-
-  .details input,
-  .details textarea {
-    padding: 5%;
-    font-size: 2rem;
-  }
-
-  .details button {
-    padding: 5%;
-    font-size: 1rem;
-  }
-}
-
-@media only screen and (min-width: 768px) and (max-width: 1024px) {
-  /* Your styles for larger Android phones (e.g., tablets in portrait mode) */
-}
-/* Media Queries for iOS Phones */
-@media only screen and (max-device-width: 480px) and (-webkit-device-pixel-ratio: 2) {
-  /* Your styles for iPhone 4 and 4S */
-}
-
-@media only screen and (max-device-width: 568px) and (-webkit-device-pixel-ratio: 2) {
-  /* Your styles for iPhone 5, 5C, and 5S */
-}
-
-@media only screen and (max-device-width: 667px) and (-webkit-device-pixel-ratio: 2) {
-  /* Your styles for iPhone 6, 6S, 7, 8 */
-}
-
-@media only screen and (max-device-width: 667px) and (-webkit-device-pixel-ratio: 3) {
-  /* Your styles for iPhone 6 Plus, 6S Plus, 7 Plus, 8 Plus */
-}
-
-@media only screen and (max-device-width: 736px) and (-webkit-device-pixel-ratio: 3) {
-  /* Your styles for iPhone X, XS, 11 Pro */
-}
-
-@media only screen and (max-device-width: 812px) and (-webkit-device-pixel-ratio: 3) {
-  /* Your styles for iPhone XR, 11 */
-}
-
-@media only screen and (max-device-width: 896px) and (-webkit-device-pixel-ratio: 2) {
-  /* Your styles for iPhone XS Max, 11 Pro Max */
-}
-
-@media only screen and (max-device-width: 926px) and (-webkit-device-pixel-ratio: 2) {
-  /* Your styles for iPhone 12 Mini */
-}
-
-@media only screen and (max-device-width: 844px) and (-webkit-device-pixel-ratio: 2) {
-  /* Your styles for iPhone 12, 12 Pro */
-}
-
-@media only screen and (max-device-width: 926px) and (-webkit-device-pixel-ratio: 3) {
-  /* Your styles for iPhone 12 Pro Max */
-}
+  
