added some more functionality in my cake shop

--- a/src/App.css
+++ b/src/App.css
@@ -4,15 +4,35 @@
     padding:0;
 
 }
+html, body {
+  height: 100%;
+  margin: 0;
+}
+.App{
+min-height: 100vh;
+}
 .App.light {
     /* Light theme styles */
     background-color: white;
     color: black;
   }
   
-  .App.dark {
+.App.dark {
     /* Dark theme styles */
     background-color: black;
     color: white;
 }
-  
+main {
+  flex: 1;
+}
+
+
+
+.footer {
+  background: #f1f1f1; 
+  padding: 20px;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
