--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
-/* App.css */
-*{
-    margin:0;
-    padding:0;
-
+/* Reset default margins and paddings */
+* {
+  margin: 0;
+  padding: 0;
+ 
 }
+
+/* Ensure the entire page height is taken up */
 html, body {
   height: 100%;
-  margin: 0;
 }
-.App{
-min-height: 100vh;
+
+/* Main container setup */
+.App {
+  min-height: 100vh; /* Full viewport height */
+  display: flex;
+  flex-direction: column;
 }
-.App.light {
-    /* Light theme styles */
-    background-color: white;
-    color: black;
-  }
-  
-.App.dark {
-    /* Dark theme styles */
-    background-color: black;
-    color: white;
-}
+
+/* Main content area takes up the remaining space */
 main {
   flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
+/* Light theme styles */
+.App.light {
+  background-color: white;
+  color: black;
+}
 
+/* Dark theme styles */
+.App.dark {
+  background-color: black;
+  color: white;
+}
 
-.footer {
-  background: #f1f1f1; 
-  padding: 20px;
+/* Footer setup */
+footer {
+  background-color: #f1f1f1;
   text-align: center;
-  position: absolute;
-  bottom: 0;
+  padding: 10px;
+  margin-top: auto;
   width: 100%;
 }
